test/compile-fail/scope/use-mod-file-no-name/expected.txt
error: unresolved import `b`
 --> top.rhdl:2:7
  |
2 | use a::b;
  |        ^ no `b` in `a`
